infrastructure/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - szakdolgozat-monitoring.mbraptor.tech
    secretName: tls-mbraptor.tech
  rules:
  - host: szakdolgozat-monitoring.mbraptor.tech
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
